css/main.css
body {
  font-family: "PT Sans Caption", sans-serif;
  background-color: #f7ecde;
  position: relative;
  height: 100vh;
}

h1 {
  font-family: "Pacifico", cursive;
  font-weight: 400;
  font-style: normal;
}
h2,
h3,
h4,
h5,
h6 {
  font-family: "Righteous", sans-serif;
}

:root {
  --color-main: #fec260;
  --color-black: #000;
  --color-gradient-green: #3ca55c;
  --color-gradient-yellow: #b5ac49;
  --color-border-focus: rgba(217, 156, 57, 0.199);
  --color-btn: #d1512d;
  --color-btn-hover: #bb4120;
  --color-white: #fff;
  --color-overlay: rgba(0, 0, 0, 0.5);
}

/*================================*/
/* default code from Fontawesome itself */
.icon::before {
  display: inline-block;
  text-rendering: auto;
  -webkit-font-smoothing: antialiased;
}

.bookmark-icon::before {
  font: var(--fa-font-solid);
  content: "\f02e";
}
.bookmark-icon::after {
  font: var(--fa-font-solid);
  content: "\f02e";
}

::-moz-selection {
  color: #000;
  background: var(--color-main);
}

::selection {
  color: #000;
  background: var(--color-main);
}

/*================================*/

.bookmark .site-heading {
  font-size: 3rem;
}
.bookmark .site-heading span {
  position: relative;
}
.bookmark .site-heading span::after {
  content: "";
  width: 100%;
  height: 1.25rem;
  background-color: var(--color-main);
  position: absolute;
  bottom: 0;
  left: 0;
  z-index: -1;
  transition: all 0.3s;
}

.bookmark .site-heading span:hover::after {
  height: 2.188rem;
}

.bookmark-body {
  border-top: 0.125rem dotted var(--color-black);
  border-bottom: 0.125rem dotted var(--color-black);
}

.bookmark-body .sub-heading {
  background-image: linear-gradient(
    to right,
    var(--color-gradient-green),
    var(--color-gradient-yellow)
  );
  background-clip: text;
  -webkit-text-fill-color: transparent;
  font-family: "Righteous", cursive;
}

.bookmark-body input.form-control:focus {
  background-color: var(--color-white);
  border-color: var(--color-border-focus);
  box-shadow: 0 0 0 0.3124rem var(--color-border-focus);
  outline: 0;
}

.bookmark-body .submit-btn {
  background-color: var(--color-btn);
  padding: 0.438rem 3.125rem;
  color: var(--color-white);
}

.bookmark-body .submit-btn:hover {
  background-color: var(--color-btn-hover);
}

.dialog-overlay {
  background-color: var(--color-overlay);
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.dialog-overlay .dialog-context {
  background-color: var(--color-white);
  width: 31.25rem;
  height: 15.625rem;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  border-radius: 0.438rem;
}

.dialog-overlay .dots {
  gap: 0.438rem;
}
.dialog-overlay .dots span {
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 50%;
}
.dialog-overlay .dots span:first-child {
  background-color: var(--color-btn-hover);
}

.dialog-overlay .dots span:nth-child(2) {
  background-color: var(--color-main);
}

.dialog-overlay .dots span:last-child {
  background-color: var(--color-gradient-green);
}

.dialog-overlay .dialog-content .icon-arrow {
  color: var(--color-btn-hover);
}

